--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.container {
+  max-width: 800px;
+}
 /* Ex 1 */
 .violet {
   background-color: violet;
@@ -44,7 +47,7 @@
   height: 140px;
   position: relative;
   border-radius: 4px;
-  margin-top: 140px;
+  margin-top: 100px;
 }
 
 .house::before {
